--- a/ch1/Vector.ipynb
+++ b/ch1/Vector.ipynb
@@ -174,15 +174,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./table1-1.jpeg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./table1-2.jpeg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "!()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
