list comprehension and generator expression. [] v.s. ()

--- a/ch02/List comprehension and generator expression.ipynb
+++ b/ch02/List comprehension and generator expression.ipynb
@@ -1,6 +1,205 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "列表推导也有可能被滥用. 以前看到过有 Python 代码用列表推导来重复获取一个函数的副作用. 通常的原则是, 只用列表推导来创建新的列表, 并且尽量保持简短. 如果列表推导的代码超过了2行, 你可能就要考虑是不是得用 for 循环重写了. 就跟写文章一样, 并没有什么硬性的规则, 这个度得你自己把握."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python 2.x 中, 列表推导存在变量泄露的问题. 但是在 Python3 中, 列表推导, 集合推导和字典推导都有了自己的局部作用域, 就像函数似的. 表达式内部的变量和赋值只在局部起作用, 表达式的上下文利的同名变量还可以被正常引用, 局部变量并不会影响到他们. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 列表推导计算笛卡尔积"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('black', 'S'),\n",
+       " ('black', 'M'),\n",
+       " ('black', 'L'),\n",
+       " ('white', 'S'),\n",
+       " ('white', 'M'),\n",
+       " ('white', 'L')]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "colors = ['black', 'white']\n",
+    "sizes = ['S', 'M', 'L']\n",
+    "tshirts = [(color, size) for color in colors for size in sizes]\n",
+    "tshirts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('black', 'S'),\n",
+       " ('white', 'S'),\n",
+       " ('black', 'M'),\n",
+       " ('white', 'M'),\n",
+       " ('black', 'L'),\n",
+       " ('white', 'L')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(color, size) for size in sizes\n",
+    "                for color in colors]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 生成器表达式"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "生成器遵守了迭代器协议, 可以逐个地产出元素, 而不是建立一个完整的列表, 然后再把这个列表传递到某个构造函数里.\n",
+    "\n",
+    "生成器表达式的语法跟列表推导差不多, 只不过把方括号换成圆括号而已."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "black S\n",
+      "black M\n",
+      "black L\n",
+      "white S\n",
+      "white M\n",
+      "white L\n"
+     ]
+    }
+   ],
+   "source": [
+    "colors = ['black', 'white']\n",
+    "sizes = ['S', 'M', 'L']\n",
+    "for tshirts in ('%s %s' % (c, s) for c in colors for s in sizes):\n",
+    "    print tshirts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object <genexpr> at 0x103a39870>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((c, s) for c in colors for s in sizes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('black', 'S'),\n",
+       " ('black', 'M'),\n",
+       " ('black', 'L'),\n",
+       " ('white', 'S'),\n",
+       " ('white', 'M'),\n",
+       " ('white', 'L')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(c, s) for c in colors for s in sizes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 0
 }
